fix(console): improve logs display on small screens
(cherry picked from commit 8cfc5f0962ae1a6395a4ca7f88e964aebf023bd9)

--- a/gravitee-apim-console-webui/src/management/api/api-traffic-v4/runtime-logs-details/components/runtime-logs-proxy/components/api-proxy-request-metric-overview/api-proxy-request-metric-overview.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/api-traffic-v4/runtime-logs-details/components/runtime-logs-proxy/components/api-proxy-request-metric-overview/api-proxy-request-metric-overview.component.scss
@@ -11,3 +11,7 @@
   border: 1px solid mat.m2-get-color-from-palette(gio.$mat-dove-palette, 'darker20');
   border-radius: 8px;
 }
+
+.issues-panel {
+  margin-top: 16px;
+}
